--- a/app/src/main/res/layout/activity_add__subscriber_group.xml
+++ b/app/src/main/res/layout/activity_add__subscriber_group.xml
@@ -29,6 +29,13 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler_view"
+            tools:listitem="@layout/item_contact"
+            />
+
 
     </LinearLayout>
 
