--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
     <color name="gray">#1c313a</color>
 
 
+    <color name="colorPrimaryLight">#3A4E68</color>
+    <color name="colorPrimary">#222E3E</color>
+    <color name="colorSecondary">#FF9900</color>
+
+
 </resources>
