--- a/app/src/main/res/layout/activity_new_channel.xml
+++ b/app/src/main/res/layout/activity_new_channel.xml
@@ -34,12 +34,14 @@
             android:orientation="horizontal"
             android:layout_marginTop="20dp"
             >
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/photo_camera"
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="20dp"
+                android:id="@+id/image_set_channel"
+                android:src="@drawable/photo_camera"
+
                 />
             <EditText
                 android:layout_width="match_parent"
@@ -48,6 +50,7 @@
                 android:layout_marginRight="10dp"
                 android:paddingBottom="15dp"
                 android:paddingLeft="15dp"
+                android:id="@+id/channel_name"
                 />
 
         </LinearLayout>
@@ -68,7 +71,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="0dp"
-            android:id="@+id/describtion"
+            android:id="@+id/channel_describtion"
             />
             <TextView
                 android:layout_width="match_parent"
@@ -80,40 +83,40 @@
                 />
             </RelativeLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="50dp"
-                android:layout_marginLeft="20dp"
-                >
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_marginTop="50dp"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                >-->
 
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/wallet"
-                    android:layout_marginRight="10dp"
-                    />
+<!--                <ImageView-->
+<!--                    android:layout_width="20dp"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:src="@drawable/wallet"-->
+<!--                    android:layout_marginRight="10dp"-->
+<!--                    />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Launch paid Channel"
-                />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Launch paid Channel"-->
+<!--                />-->
 
-               <Switch
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginLeft="150dp"
-                   />
-            </LinearLayout>
+<!--               <Switch-->
+<!--                   android:layout_width="wrap_content"-->
+<!--                   android:layout_height="wrap_content"-->
+<!--                   android:layout_marginLeft="150dp"-->
+<!--                   />-->
+<!--            </LinearLayout>-->
 
-            <TextView
-                android:layout_margin="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Launch paid channel where user will be able to join only after paying the subscription pricel"
-                />
+<!--            <TextView-->
+<!--                android:layout_margin="20dp"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Launch paid channel where user will be able to join only after paying the subscription pricel"-->
+<!--                />-->
         </LinearLayout>
 
 
