--- a/app/src/main/res/layout/fragment_myprofile.xml
+++ b/app/src/main/res/layout/fragment_myprofile.xml
@@ -48,7 +48,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/username"
+            android:id="@+id/name"
             android:text="Tamilarasan"
             android:textStyle="bold"
             android:textSize="22dp"
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@+id/username"
+            android:layout_below="@+id/name"
             android:gravity="center_horizontal"
             >
         <TextView
@@ -69,6 +69,7 @@
             android:layout_height="wrap_content"
             android:text="/@Tamil"
             android:textSize="18dp"
+            android:id="@+id/username"
             android:textColor="@color/gray"
             android:layout_centerHorizontal="true"
             />
