--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,62 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="end">
-
-
-
-    <LinearLayout
-        android:layout_width="fill_parent"
+    >
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        android:fitsSystemWindows="true"
+        tools:openDrawer="end"
+        android:id="@+id/drawer_layout">
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="ODIGIA"
-            android:background="@color/PrimaryDark"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            />
-
-
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_action_button"
-                android:layout_width="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="fill_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:title="ODIGIA"
+                android:background="@color/PrimaryDark"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                />
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
-                android:layout_margin="16dp"
-                app:backgroundTint="@color/Primarylight"
-                app:srcCompat="@drawable/ic_baseline_add_24"
-                app:tint="@color/white"
+                android:background="@color/PrimaryDark"
+                android:elevation="6dp"
+                app:tabIndicatorColor="@color/white"
+                app:tabTextColor="@color/white"
+                />
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
                 />
 
-        </FrameLayout>
 
-    </LinearLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+
+
+        </LinearLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header_main"
+            app:menu="@menu/activity_main_drawer"
+
+            />
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer"
-
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:layout_alignParentEnd="true"
+        app:backgroundTint="@color/Primary"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:tint="@color/white"
         />
 
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+
+
+
+
+</RelativeLayout>
 
