--- a/app/src/main/res/layout/activity_group__settings.xml
+++ b/app/src/main/res/layout/activity_group__settings.xml
@@ -52,6 +52,7 @@
 
         </LinearLayout>
         <RadioGroup
+            android:id="@+id/radiogroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -64,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:text="Public Group"
                 android:paddingLeft="10dp"
+                android:tag="public"
                 android:id="@+id/radio_button_1"
                 />
             <TextView
@@ -81,6 +83,7 @@
                 android:text="Private Group"
                 android:paddingLeft="10dp"
                 android:id="@+id/radio_button_2"
+                android:tag="private"
 
                 />
             <TextView
