--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".listFragment"
+    tools:context=".activity.ListActivity"
     android:orientation="vertical"
     >
 
@@ -233,4 +233,5 @@
 
 
     </LinearLayout>
+
 </LinearLayout>
