--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".settingFragment"
+    tools:context=".activity.SettingActivity"
     android:orientation="vertical"
     >
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -26,7 +27,7 @@
 
 
     <!-- TODO: Update blank fragment layout -->
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -314,4 +315,5 @@
 
 
     </LinearLayout>
+
 </LinearLayout>
